kubernetes/apps/base-system/victoriametrics/prometheus-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-exporter
  namespace: victoriametrics
  labels:
    app: prometheus-exporter
spec:
  type: ClusterIP
  selector:
    app: prometheus-exporter
  ports:
    - name: metrics
      port: 9394
      targetPort: 9394
      protocol: TCP
